Feat: Add endpoints to create/read/update users and films